--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ script:
 install:
  — npm install -g firebase-tools
 after_success:
- — firebase deploy — project school-testing-97c98 — token 1/3nWn8hWMNxE10QLCEKp-d7RQWK2Pzr3SqQIcrAqlyBrhvDcOeQk0Gq2GsF8DPj8i.
+ — firebase deploy — project "school-testing-97c98" — token $FIREBASE_TOKEN
