--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,5 @@ script:
 install:
   - npm install -g firebase-tools
 after_succes:
+  - npm run build
   - firebase deploy — project "school-testing-97c98" — token $FIREBASE_TOKEN
