--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,11 @@ language: node_js
 sudo: false
 node_js:
   - "8.11.4"
+before_script:
+  - npm install
 script:
-  - echo "Deploy !!"
+  - npm run build
 install:
   - npm install -g firebase-tools
 after_succes:
-  - npm run build
   - firebase deploy — project "school-testing-97c98" — token $FIREBASE_TOKEN
