--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,13 @@
 language: node_js
-sudo: false
 node_js:
   - "8.11.4"
-script:
-  - npm run build
-install:
+
+before_script:
   - npm install -g firebase-tools
   - npm install
-after_succes:
+
+script:
+  - npm run build
+
+after_success:
   - firebase deploy — project "school-testing-97c98" — token $FIREBASE_TOKEN
