--- a/.travis.yml
+++ b/.travis.yml
@@ -4,10 +4,9 @@ node_js:
 
 before_script:
   - npm install -g firebase-tools
-  - npm install
 
 script:
   - npm run build
 
 after_success:
-  - firebase deploy — project "school-testing-97c98" — token $FIREBASE_TOKEN
+  - firebase deploy --project "school-testing-97c98" --token $FIREBASE_TOKEN --non-interactive
