--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "firebase": "^5.4.0",
+    "material-design-icons-iconfont": "^3.0.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.1",
+    "vuelidate": "^0.7.4",
+    "vuetify": "^1.1.14",
     "vuex": "^3.0.1"
   },
   "devDependencies": {
@@ -25,6 +28,7 @@
     "babel-jest": "^23.0.1",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.0.1",
+    "vue-cli-plugin-vuetify": "^0.1.6",
     "vue-template-compiler": "^2.5.17"
   }
 }
