--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,8 @@
 language: node_js
 node_js:
-  - '8.12.0'
+  - 'stable'
 
 before_script:
-  - npm prune
   - npm install -g firebase-tools
 
 script:
