--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^23.6.0",
     "eslint-config-prettier": "^3.3.0",
+    "har-validator": "^5.1.3",
     "node-sass": "^4.10.0",
     "sass-loader": "^7.0.1",
     "vue-cli-plugin-vuetify": "^0.1.6",
